crates/slpy-eval/tests/snapshots/golden_grids__gradient-motion_80x24_ascii-fine.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
gradient-motion frame 10
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: ascii-fine  fg: chroma
+--------------------------------------------------------------------------------+
|::;;;iii1111tttfffLLLLCCCGGG0000888@@@@@@@@@@888000GGGGCCCLLLffffttt111iiii;;;::|
|;;iii1111tttfffLLLLCCCGGG0000888@@@@@@@@@@888000GGGGCCCLLLffffttt111iiii;;;:::,,|
|ii1111tttfffLLLLCCCGGG0000888@@@@@@@@@@888000GGGGCCCLLLffffttt111iiii;;;:::,,,,.|
|111tttffffLLLCCCGGGG000888@@@@@@@@@@888000GGGGCCCLLLffffttt111iiii;;;:::,,,,... |
|tttffffLLLCCCGGGG000888@@@@@@@@@@8880000GGGCCCLLLLfffttt1111iii;;;::::,,,...    |
|ffffLLLCCCGGGG000888@@@@@@@@@@8880000GGGCCCLLLLfffttt1111iii;;;::::,,,...       |
|fLLLCCCGGGG000888@@@@@@@@@@8880000GGGCCCLLLLfffttt1111iii;;;::::,,,...          |
|LCCCGGGG000888@@@@@@@@@@8880000GGGCCCLLLLfffttt1111iii;;;::::,,,...           ..|
|CCGGG0008888@@@@@@@@@8880000GGGCCCLLLLfffttt1111iii;;;::::,,,...           ...,,|
|GG0008888@@@@@@@@@8888000GGGCCCCLLLffftttt111iii;;;;:::,,,....          ...,,,,:|
|008888@@@@@@@@@8888000GGGCCCCLLLffftttt111iii;;;;:::,,,....          ...,,,,:::;|
|888@@@@@@@@@8888000GGGCCCCLLLffftttt111iii;;;;:::,,,....          ...,,,,:::;;;i|
|@@@@@@@@@8888000GGGCCCCLLLffftttt111iii;;;;:::,,,....          ...,,,,:::;;;iiii|
|@@@@@@8888000GGGCCCCLLLffftttt111iii;;;;:::,,,....          ...,,,,:::;;;iiii111|
|@@@8888000GGGCCCCLLLffftttt111iii;;;;:::,,,....          ....,,,:::;;;;iii111ttt|
|@888000GGGGCCCLLLffffttt111iiii;;;:::,,,,...          ....,,,:::;;;;iii111ttttff|
|8000GGGGCCCLLLffffttt111iiii;;;:::,,,,...          ....,,,:::;;;;iii111ttttfffLL|
|0GGGGCCCLLLffffttt111iiii;;;:::,,,,...          ....,,,:::;;;;iii111ttttfffLLLCC|
|GGCCCLLLffffttt111iiii;;;:::,,,,...          ....,,,:::;;;;iii111ttttfffLLLCCCCG|
|CCLLLffffttt111iiii;;;:::,,,,...           ...,,,::::;;;iii1111tttfffLLLLCCCGGG0|
|LLLfffttt1111iii;;;::::,,,...           ...,,,::::;;;iii1111tttfffLLLLCCCGGG0000|
|fffttt1111iii;;;::::,,,...           ...,,,::::;;;iii1111tttfffLLLLCCCGGG0000888|
|ttt1111iii;;;::::,,,...           ...,,,::::;;;iii1111tttfffLLLLCCCGGG0000888@@@|
|                                                                                |
+--------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 51febf4df69a0ad5
  1 9a42589a4ceb00a1
  2 7b8193451b610b5d
  3 05bfe0c3f035dc95
  4 ed05d4dbd3121505
  5 3959608745b4e0e9
  6 4d14a4365b512f05
  7 39ad7b43f811ee9d
  8 2959c6c4cfe8e62d
  9 353300d203a4b659
 10 d249fae1fb980c15
 11 0ef5e2948b941b09
 12 70606656a6aad689
 13 b75b5c1506ca94a5
 14 1b2681a7e9f1845d
 15 c7ad5aeea6d316c1
 16 a5b69125fa7252a5
 17 f637b6d05e906c6d
 18 0a747abacf0b18c5
 19 b61c34af772123f5
 20 4337a7a9535da411
 21 4b81512fdb1c1969
 22 1ce8f3b720b20fe1
 23 223995d44c4552f5
